Fix padding on mobile

--- a/src/app/dim-ui/PageWithMenu.m.scss
+++ b/src/app/dim-ui/PageWithMenu.m.scss
@@ -53,8 +53,8 @@
 
   @include phone-portrait {
     position: static;
-    margin-right: 0;
-    padding-right: 0;
+    margin: 0;
+    padding: 0;
     width: 100%;
     max-height: none;
   }
